exports[`StoriesContent renders with props 1`] = `
<div>
<Meta title="test story" image="http://test.com/2x1.jpg" id="1" meta={{...}} />
<section className="background--light-primary hard-sides hard-top">
<StoryImage story={{...}} />
<div className="soft soft-double-sides@palm-wide-and-up push-top">
<h2 className="capitalize">
test story
</h2>
<h4 className="text-dark-tertiary">
test subtitle
</h4>
<div dangerouslySetInnerHTML={{...}} />
</div>
</section>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</div>
`;

exports[`StoriesContent renders with video 1`] = `
<div>
<Meta title="test story" image="http://test.com/2x1.jpg" id="1" meta={{...}} />
<section className="background--light-primary hard-sides hard-top">
<SingleVideoPlayer ooyalaId="test" />
<div className="soft soft-double-sides@palm-wide-and-up push-top">
<h2 className="capitalize">
test story
</h2>
<h4 className="text-dark-tertiary">
test subtitle
</h4>
<div dangerouslySetInnerHTML={{...}} />
</div>
</section>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</div>
`;

exports[`StoriesContent renders without imaes 1`] = `
<div>
<Meta title="test story" image={{...}} id="1" meta={{...}} />
<section className="background--light-primary hard-sides hard-top">
<StoryImage story={{...}} />
<div className="soft soft-double-sides@palm-wide-and-up push-top">
<h2 className="capitalize">
test story
</h2>
<h4 className="text-dark-tertiary">
test subtitle
</h4>
<div dangerouslySetInnerHTML={{...}} />
</div>
</section>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</div>
`;

exports[`StoryImage renders non tablet version 1`] = `<div className="one-whole ratio--square ratio--landscape@palm-wide-and-up background--fill" style={{...}} />`;
